[tool.poetry]
name = "api-usage-tracker"
version = "0.1.0"
description = "Django app to track API endpoint usage and mark deprecated endpoints"
authors = ["djbios"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/djbios/api-usage-tracker"
repository = "https://github.com/djbios/api-usage-tracker"
documentation = "https://github.com/djbios/api-usage-tracker#readme"
keywords = ["django", "api", "tracking", "deprecation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
packages = [
    { include = "api_usage_tracker" }
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.0"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-django = "^4.5.0"
pytest-cov = "^4.0.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
addopts = "--cov=api_usage_tracker --cov-report=xml --cov-report=term-missing"

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "W0511",  # fixme
]

[tool.pylint.format]
max-line-length = 120
